--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,26 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* Fonts */
+@font-face {
+  font-family: 'Inter';
+  src: url('assets/fonts/Inter/Inter-Regular.ttf') format('opentype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+/* Fonts */
+@font-face {
+  font-family: 'Faster-One';
+  src: url('assets/fonts/Faster-One/FasterOne-Regular.ttf') format('opentype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+/* Custom scrollbar - Works on Firefox */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: #777777 #484848;
+  scroll-behavior: smooth;
+}
