--- a/src/app/admin/layout/layout-page/layout-page.component.html
+++ b/src/app/admin/layout/layout-page/layout-page.component.html
@@ -4,7 +4,7 @@
     <admin-sidebar></admin-sidebar>
   </div>
   <!-- Column two -->
-  <div class="pl-8">
+  <div class="px-8 w-screen">
     <router-outlet></router-outlet>
   </div>
 </div>
