--- a/src/app/admin/pages/users/users.component.html
+++ b/src/app/admin/pages/users/users.component.html
@@ -1,1 +1,96 @@
-<p>users works!</p>
+<div class="font-[Inter]">
+  @if (showDialog) {
+    <shared-modal-dialog [title]="dialogMessage.title" [description]="dialogMessage.description" (closeEvent)="onDialogClose()"></shared-modal-dialog>
+  }
+  <div class="mt-8 mx-8 md:mx-4 sm:mx-2">
+    <!-- header -->
+    <div class="flex flex-col sm:flex-row justify-between items-start">
+      <!-- title -->
+      <div>
+        <h1 class="text-3xl font-bold text-gray-800">Users</h1>
+        <p class="text-gray-500">Manage all users</p>
+      </div>
+
+      <!-- Action buttons -->
+      <div class="flex gap-2 mt-2 sm:mt-0">
+        <!-- TODO: Add logic & implement add user -->
+        <button
+          class="bg-[#39e554] hover:bg-[#33cc4b] text-white text-sm font-bold py-2 px-4 rounded"
+
+        >
+          Add User
+        </button>
+        <button
+          class="bg-black hover:bg-gray-800 text-white text-sm font-bold py-2 px-4 rounded"
+          (click)="exportUsersToCSV()"
+        >
+          Export to CSV +
+        </button>
+      </div>
+    </div>
+
+
+    <!-- Content -->
+    <div class="">
+      <div class="flex flex-col sm:flex-row justify-between items-center mt-4">
+        <!-- Filters -->
+        <div class="w-full sm:w-1/4 flex gap-2">
+          <div class="flex items-center text-gray-500">Sort by: </div>
+            <button class="bg-gray-800 hover:bg-gray-600 focus:bg-gray-600 text-white text-sm font-bold py-2 px-4 rounded-full" (click)="changeOrder('id')">Id</button>
+            <button class="bg-gray-800 hover:bg-gray-600 focus:bg-gray-600 text-white text-sm font-bold py-2 px-4 rounded-full" (click)="changeOrder('name')">Name</button>
+            <button class="bg-gray-800 hover:bg-gray-600 focus:bg-gray-600 text-white text-sm font-bold py-2 px-4 rounded-full" (click)="changeOrder('email')">Email</button>
+        </div>
+        <!-- Search -->
+        <!-- TODO: Add logic to make search bar work -->
+        <div class="w-full sm:w-2/4 mt-4 sm:mt-0">
+          <input
+            type="text"
+            placeholder="Search users"
+            class="bg-[#EAF0F7] py-2 px-3 rounded shadow-md w-full"
+          />
+        </div>
+      </div>
+      <hr class="my-4"/>
+      <!-- Table -->
+      <div class="overflow-x-auto">
+        <table class="min-w-full table-auto">
+          <thead>
+            <tr class="text-left md:text-center">
+              <th class="w-1/7 px-4">User id</th>
+              <th class="w-1/7 px-4">Name</th>
+              <th class="w-1/7 px-4">Surname</th>
+              <th class="w-1/7 px-4">Email</th>
+              <th class="w-1/7 px-4">Document</th>
+              <th class="w-1/7 px-4">Role</th>
+              <th class="w-1/7 px-4">Actions</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let user of users! | sortBy: orderby" class="text-left md:text-center">
+              <td class="font-bold px-4">{{ user.id }}</td>
+              <td class="px-4 py-1">{{ user.name }}</td>
+              <td class="px-4 py-1">{{ user.surname }}</td>
+              <td class="px-4 py-1">{{ user.email }}</td>
+              <td class="px-4 py-1">{{ user.documentNumber }}</td>
+              <td class="px-4 py-1">{{ user.role }}</td>
+              <td class="px-4 py-1">
+                <!-- TODO: Add logic & implement edit button -->
+                <button
+                  class="bg-[#39e554] hover:bg-[#33cc4b] text-white font-bold py-1 px-4 rounded"
+                >
+                  Edit
+                </button>
+                <button
+                  class="bg-[#FF4040] hover:bg-[#e53935] text-white font-bold py-1 px-4 rounded ml-0 md:ml-2 mt-2 md:mt-1 lg:mt-0"
+                  (click)="deleteUser(user.id.toString())"
+                >
+                  Delete
+                </button>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+</div>
