--- a/src/app/admin/pages/users/users.component.html
+++ b/src/app/admin/pages/users/users.component.html
@@ -41,12 +41,12 @@
             <button class="bg-gray-800 hover:bg-gray-600 focus:bg-gray-600 text-white text-sm font-bold py-2 px-4 rounded-full" (click)="changeOrder('email')">Email</button>
         </div>
         <!-- Search -->
-        <!-- TODO: Add logic to make search bar work -->
         <div class="w-full sm:w-2/4 mt-4 sm:mt-0">
           <input
             type="text"
             placeholder="Search users"
             class="bg-[#EAF0F7] py-2 px-3 rounded shadow-md w-full"
+            [(ngModel)]="searchText"
           />
         </div>
       </div>
@@ -66,7 +66,7 @@
             </tr>
           </thead>
           <tbody>
-            <tr *ngFor="let user of users! | sortBy: orderby" class="text-left md:text-center">
+            <tr *ngFor="let user of users! | search: searchText | sortBy: orderby" class="text-left md:text-center">
               <td class="font-bold px-4">{{ user.id }}</td>
               <td class="px-4 py-1">{{ user.name }}</td>
               <td class="px-4 py-1">{{ user.surname }}</td>
