--- a/src/app/admin/layout/layout-page/layout-page.component.html
+++ b/src/app/admin/layout/layout-page/layout-page.component.html
@@ -1,10 +1,10 @@
 <div class="flex">
   <!-- Column one -->
-  <div class="md:flex h-screen w-[14%] md:w-[6%] lg:w-[5%]">
-    <admin-sidebar></admin-sidebar>
+  <div class="md:flex h-screen w-[14%] md:w-[6%] lg:w-[5%] fixed">
+      <admin-sidebar></admin-sidebar>
   </div>
   <!-- Column two -->
-  <div class="px-8 w-screen">
-    <router-outlet></router-outlet>
+  <div class="px-8 w-screen ml-[14%] md:ml-[6%] lg:ml-[5%] overflow-auto">
+      <router-outlet></router-outlet>
   </div>
 </div>
