--- a/src/app/admin/pages/users/users.component.html
+++ b/src/app/admin/pages/users/users.component.html
@@ -74,12 +74,7 @@
               <td class="px-4 py-1">{{ user.surname }}</td>
               <td class="px-4 py-1">{{ user.email }}</td>
               <td class="px-4 py-1">{{ user.documentNumber }}</td>
-              <!-- TODO: Create a pipe to handle this -->
-              @if (user.role === 1) {
-                <td class="px-4 py-1">admin</td>
-              } @else {
-                <td class="px-4 py-1">{{ user.role }}</td>
-              }
+              <td class="px-4 py-1">{{ user.role | adminIdtoName }}</td>
               <td class="px-4 py-1">
                 <button
                   class="bg-[#39e554] hover:bg-[#33cc4b] text-white font-bold py-1 px-4 rounded"
