--- a/src/app/shared/components/nav-bar/nav-bar.component.css
+++ b/src/app/shared/components/nav-bar/nav-bar.component.css
@@ -2,3 +2,7 @@
   font-size: 2.0625rem; /* 33px */
   line-height: 2.375rem; /* 38px */
 }
+
+.textShadow {
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
+}
