24/05/2024: Logo redirects to home

--- a/src/app/auth/layout/layout-page/layout-page.component.html
+++ b/src/app/auth/layout/layout-page/layout-page.component.html
@@ -17,7 +17,7 @@
     </div> -->
 
     <!-- logo -->
-    <div class="flex justify-center mt-4">
+    <div class="flex justify-center mt-4" [routerLink]="['/home']">
       <img class="w-[80%] md:w-[70%]" src="/assets/logo/goParkLogo.svg" alt="GoPark logo">
     </div>
 
