--- a/src/app/shared/pages/home-page/home-page.component.css
+++ b/src/app/shared/pages/home-page/home-page.component.css
@@ -6,3 +6,15 @@
   background-repeat: no-repeat; /* Do not repeat the image */
   background-image: url('/assets/background/sven-mieke-lOgR82HSQKM-unsplash.jpg')
 }
+
+.textShadow-08 {
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
+}
+
+.textShadow-02 {
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.card-shadow {
+  box-shadow: 0 0 12px rgba(0, 0, 0, 0.25);
+}
